# openfused

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json  wearethecompute.md
.github/workflows/: publish.yml
daemon/: Cargo.toml  Dockerfile
daemon/src/: fuse_fs.rs  main.rs  server.rs  store.rs
demo/: Dockerfile  docker-compose.yml  entrypoint.sh
drafts/: hn-post.md
hosted/src/: provision.ts
rust/: Cargo.toml  README.md
rust-port/: Cargo.toml
rust-port/openfuse-cli/: Cargo.toml
rust-port/openfuse-cli/src/: main.rs  registry.rs  sync.rs  watch.rs
rust-port/openfuse-core/: Cargo.toml
rust-port/openfuse-core/src/: crypto.rs  main.rs  store.rs
rust-port/openfuse-daemon/: Cargo.toml  Dockerfile
rust-port/openfuse-daemon/src/: main.rs  server.rs  types.rs
rust/src/: crypto.rs  main.rs  registry.rs  store.rs  sync.rs  watch.rs
site/: index.html  security.html
src/: cli.ts  crypto.ts  mcp.ts  registry.ts  store.ts  sync.ts  wasm-core.ts  wasm.d.ts  watch.ts
templates/: CONTEXT.md  SOUL.md
wasm/: openfuse-core.wasm
worker/: wrangler.toml
worker/src/: index.ts
