[package]
name = "openfused-core"
version = "0.4.2"
edition = "2021"
description = "Core library for OpenFused — crypto, store, message types. Compiles to wasm32-wasip1."
license = "MIT"
repository = "https://github.com/openfused/openfused"

[lib]
name = "openfused_core"
path = "src/lib.rs"

[[bin]]
name = "openfused-core"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
hex = "0.4"
age = "0.11"
sha2 = "0.10"
