[package]
name = "openfused-daemon"
version = "0.4.4"
publish = false
edition = "2021"
description = "HTTP daemon for OpenFused — authenticated agent-to-agent messaging"
license = "MIT"
repository = "https://github.com/openfused/openfused"

[[bin]]
name = "openfused"
path = "src/main.rs"

[dependencies]
openfused-core = { path = "../openfuse-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = { version = "0.8", features = ["json"] }
chrono = "0.4"
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = "0.1"
notify = "7"
subtle = "2"
hex = "0.4"
rand = "0.8"
fs2 = "0.4"

[profile.release]
lto = true
strip = true
panic = "abort"
